FLY wire David/force-app/main/default/objects/SBQQ__PriceRule__c/fields/AQS_Description__c.field-meta.xml
<CustomField>
    <fullName>AQS_Description__c</fullName>
    <description>Brief description of the Price Rule</description>
    <inlineHelpText>Brief description of the Price Rule</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>