FLY wire David/force-app/main/default/objects/SBQQ__PriceRule__c/fields/AQS_Price_Action_Count__c.field-meta.xml
<CustomField>
    <fullName>AQS_Price_Action_Count__c</fullName>
    <description>Count of Price Actions on this Price Rule. Used for informational purposes and/or triage</description>
    <inlineHelpText>Count of Price Actions on this Price Rule. Used for informational purposes and/or triage</inlineHelpText>
    <label>Price Action Count</label>
    <summaryForeignKey>SBQQ__PriceAction__c.SBQQ__Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>