FLY wire David/force-app/main/default/objects/SBQQ__PriceRule__c/fields/AQS_Price_Rule_Target_Fields__c.field-meta.xml
<CustomField>
    <fullName>AQS_Price_Rule_Target_Fields__c</fullName>
    <description>Field targeted by Price Actions on this Price Rule. Used for informational purposes and/or triage</description>
    <inlineHelpText>Field targeted by Price Actions on this Price Rule. Used for informational purposes and/or triage</inlineHelpText>
    <label>Price Rule Target Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>