FLY wire David/force-app/main/default/objects/SBQQ__PriceRule__c/fields/Count_of_Price_Actions__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Price_Actions__c</fullName>
    <description>Used for reporting purposes.</description>
    <inlineHelpText>Count of Price Actions that do not target the Price Rules Fired fields</inlineHelpText>
    <label>Count of Price Actions</label>
    <summaryFilterItems>
        <field>SBQQ__PriceAction__c.SBQQ__Field__c</field>
        <operation>notEqual</operation>
        <value>Price_Rules_Fired__c</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__PriceAction__c.SBQQ__Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>