FLY wire David/force-app/main/default/objects/SBQQ__PriceRule__c/fields/Count_of_Price_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Price_Conditions__c</fullName>
    <description>Used for reporting purposes.</description>
    <inlineHelpText>Count of Price Conditions</inlineHelpText>
    <label>Count of Price Conditions</label>
    <summaryForeignKey>SBQQ__PriceCondition__c.SBQQ__Rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>