FLY wire David/force-app/main/default/objects/SBQQ__PriceRule__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>Enter details on what the purpose of the price rule is</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>