FLY wire David/force-app/main/default/objects/SBQQ__PriceRule__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Used to display firing order of Price Rules. Used for reports, queries, and list views.</description>
    <formula>IF(ISPICKVAL(SBQQ__TargetObject__c,&quot;Configurator&quot;),&quot;1-Configurator&quot;,&quot;2-Calculator&quot;)
+&quot;-&quot;+
IF( INCLUDES(SBQQ__EvaluationEvent__c, &quot;On Initialization&quot;),&quot;1-On Initialization&quot;,
IF( INCLUDES(SBQQ__EvaluationEvent__c, &quot;Before Calculate&quot;),&quot;2-Before Calculate&quot;,
IF( INCLUDES(SBQQ__EvaluationEvent__c, &quot;On Calculate&quot;),&quot;3-On Calculate&quot;,
IF( INCLUDES(SBQQ__EvaluationEvent__c, &quot;After Calculate&quot;),&quot;4-After Calculate&quot;,&quot;&quot;))))
+
IF(ISPICKVAL(SBQQ__ConfiguratorEvaluationEvent__c,&quot;Edit&quot;),&quot;1-Edit&quot;,
IF(ISPICKVAL(SBQQ__ConfiguratorEvaluationEvent__c,&quot;Save&quot;),&quot;2-Save&quot;,&quot;&quot;))
+&quot;-&quot;
+TEXT(SBQQ__EvaluationOrder__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays firing order of price rules. Sorting by this field will display the correct order in which the rules are fired.</inlineHelpText>
    <label>Sort Order</label>
    <type>Text</type>
</CustomField>