FLY wire David/force-app/main/default/objects/SBQQ__PriceRule__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>SBQQ__EvaluationOrder__c</columns>
    <columns>NAME</columns>
    <columns>SBQQ__TargetObject__c</columns>
    <columns>SBQQ__EvaluationEvent__c</columns>
    <columns>SBQQ__ConfiguratorEvaluationEvent__c</columns>
    <columns>SBQQ__Product__c</columns>
    <columns>SBQQ__ConditionsMet__c</columns>
    <columns>SBQQ__LookupObject__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
</ListView>